# estrannaise-rs

./: Cargo.toml  LICENSE  README.md
estrannaise-rs-lib/: Cargo.toml
estrannaise-rs-lib/examples/: test.rs
estrannaise-rs-lib/src/: lib.rs
estrannaise-rs-lib/src/models/: e2.rs  menstrual_cycle.rs
estrannaise-rs-web/: Cargo.toml
estrannaise-rs-web/src/: e2.rs  lib.rs  menstrual_cycle.rs
examples/: test.rs
src/: lib.rs
src/models/: e2.rs  menstrual_cycle.rs  mod.rs
