[package]
name = "estrannaise-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[dependencies]
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
lazy_static = "1.5.0"
log = "0.4.27"
rand = { version = "0.9.1", features = [] }
splines = "4.4.2"
wasm-bindgen = "0.2.100"
